--- a/.github/workflows/AGrel1.yml
+++ b/.github/workflows/AGrel1.yml
@@ -37,9 +37,11 @@ jobs:
         run: |
           major_minor=$(echo "${{ github.event.inputs.name }}" | grep -Eo '^[0-9]+\.[0-9]+')
           branch_name="release-$major_minor"
-          echo "branch_name=$branch_name" >> $GITHUB_ENV 
-          git checkout -b "$branch_name"
-          git push origin "$branch_name"
+          echo "branch_name=$branch_name" >> $GITHUB_ENV
+          if [[ "${{ env.is_patch }}" == "false" ]]; then
+            git checkout -b "$branch_name"
+            git push origin "$branch_name"
+          fi
 
       - name: Update sec-scanners-config and dependabot config image path and image tag 
         env:
