--- a/.github/workflows/AGrel1.yml
+++ b/.github/workflows/AGrel1.yml
@@ -33,7 +33,6 @@ jobs:
           fi
 
       - name: Create a release branch #(if not a patch release)
-        if: env.is_patch == 'false'
         run: |
           major_minor=$(echo "${{ github.event.inputs.name }}" | grep -Eo '^[0-9]+\.[0-9]+')
           branch_name="release-$major_minor"
@@ -49,8 +48,8 @@ jobs:
           IMAGE_TAG: ${{ github.event.inputs.name }}
           REL_BRANCH: ${{ env.branch_name}}
         run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git config user.name "kasiakepka"
+          git config user.email "kasia.kepka23@gmail.com"
           
           git fetch origin
           git checkout -f release/sec-scanners-config
