--- a/.github/workflows/AGrel1.yml
+++ b/.github/workflows/AGrel1.yml
@@ -52,7 +52,7 @@ jobs:
           git config user.email "kasia.kepka23@gmail.com"
           
           git fetch origin
-          git checkout -f release/sec-scanners-config
+          git checkout -b release/sec-scanners-config
           git reset --hard origin/main
           sed -i "s|.*api-gateway-manager:.*|$IMAGE\:$IMAGE_TAG|g" sec-scanners-config.yaml
           git add .
