--- a/.github/workflows/release-api-gateway-1.yaml
+++ b/.github/workflows/release-api-gateway-1.yaml
@@ -50,7 +50,7 @@ jobs:
           
           git checkout -b sec-scanners-config/$IMAGE_TAG
           sed -i "s/\(releases\|main\)\/api-gateway-manager.*/releases\/api-gateway-manager\:$IMAGE_TAG/g" sec-scanners-config.yaml
-          git add .
+          git add sec-scanners-config.yaml
           if git diff-index --quiet HEAD; then
             echo "Error: No changes detected"
             exit 1
