--- a/.github/workflows/rel2.yaml
+++ b/.github/workflows/rel2.yaml
@@ -9,7 +9,7 @@ on:
     branches:
       - 'release-**'
     paths:
-      - 'sec-scanners-config.yml'
+      - 'sec-scanners-config.yaml'
 
 jobs:   
   check-prerequisites: 
