--- a/.github/workflows/rel2.yaml
+++ b/.github/workflows/rel2.yaml
@@ -16,6 +16,9 @@ jobs:
     name: check-prerequisites
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
       - name: Get current release from sec-scanners-config.yaml file
         shell: bash
         run: |
