--- a/.github/workflows/rel1.yaml
+++ b/.github/workflows/rel1.yaml
@@ -25,7 +25,7 @@ jobs:
           branch_name="release-$major_minor"
           echo "branch_name=$branch_name" >> $GITHUB_ENV
           
-          if git ls-remote --exit-code --heads origin "$branch_name" > /dev/null; then
+          if git ls-remote --heads origin "$BRANCH_NAME" | grep -q "$BRANCH_NAME"; then
             echo "branch_exists=true" >> $GITHUB_ENV
           else
             echo "branch_exists=false" >> $GITHUB_ENV
