--- a/.github/workflows/rel2.yaml
+++ b/.github/workflows/rel2.yaml
@@ -39,6 +39,13 @@ jobs:
           else
             echo "is_patch=false" >> $GITHUB_ENV
           fi
+  create-test:
+    name: Test
+    runs-on: ubuntu-latest
+    needs: check-prerequisites
+    steps:
+      - name: Test
+        run: echo "$current_release / ${{ env.current_release }}"
   build-image:
     uses: kyma-project/test-infra/.github/workflows/image-builder.yml@main
     needs: [check-prerequisites]
