--- a/.github/workflows/rel2.yaml
+++ b/.github/workflows/rel2.yaml
@@ -68,9 +68,9 @@ jobs:
       - name: Create changelog
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          RELEASE: ${{ needs.check-prerequisites.outputs.current_release }}
         run: |
-          RELEASE=${{ needs.check-prerequisites.outputs.current_release }}
-          ./scripts/create_changelog.sh "$RELEASE"
+          ./scripts/create_changelog.sh $RELEASE
 
       - name: Create draft release
         id: create-draft
