--- a/.github/workflows/release-api-gateway-1.yaml
+++ b/.github/workflows/release-api-gateway-1.yaml
@@ -43,8 +43,8 @@ jobs:
           REL_BRANCH: ${{ env.branch_name}}
           BRANCH_EXISTS: ${{ env.branch_exists }}
         run: |
-          git config user.name "kasiakepka"
-          git config user.email "kasia.kepka23@gmail.com"
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           
           git fetch origin
           git checkout -f sec-scanners-config/release
