--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -19,66 +19,6 @@ env:
   GITLEAKS_VERSION: 8.21.0
 
 jobs:
-  gitleaks:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v5
-        with:
-          fetch-depth: 0
-      - name: Fetch gitleaks ${{ env.GITLEAKS_VERSION }}
-        run: curl -Lso gitleaks.tar.gz https://github.com/gitleaks/gitleaks/releases/download/v${{ env.GITLEAKS_VERSION }}/gitleaks_${{ env.GITLEAKS_VERSION }}_linux_x64.tar.gz && tar -xvzf ./gitleaks.tar.gz
-      - name: Run gitleaks
-        # Scan commits between base and head of the pull request
-        run: ./gitleaks detect --log-opts=${PULL_BASE_SHA}...${PULL_HEAD_SHA} --verbose --redact
-        env:
-          PULL_BASE_SHA: ${{ github.event.pull_request.base.sha }}
-          PULL_HEAD_SHA: ${{ github.event.pull_request.head.sha }}
-
-  build-image:
-    name: Build manager image
-    runs-on: ubuntu-latest
-    if: github.event.pull_request.draft == false
-    steps:
-      - uses: actions/checkout@v5
-        with:
-          ref: ${{ github.event.pull_request.head.sha }}
-          fetch-depth: 0
-      - uses: ./.github/actions/build-manager-image
-        with:
-          operator-image-name: "api-gateway-manager:PR-${{github.event.number}}"
-
-  unit-tests:
-    name: Unit tests & lint
-    if: github.event.pull_request.draft == false
-    uses: ./.github/workflows/call-unit-lint.yaml
-    secrets: inherit
-
-  integration-tests:
-    name: Integration tests
-    if: github.event.pull_request.draft == false
-    needs: [build-image]
-    uses: ./.github/workflows/call-pull-integration.yaml
-    secrets: inherit
-
-  migration-downtime-tests-k3d:
-    name: Zero Downtime Migration Tests
-    runs-on: ubuntu-latest
-    needs: [build-image]
-    strategy:
-      fail-fast: false
-      matrix:
-        handler: [ "no_auth", "allow", "noop", "jwt", "oauth2_introspection" ]
-    steps:
-      - uses: actions/checkout@v5
-      - uses: ./.github/actions/load-manager-image
-      - uses: ./.github/actions/e2e-test-k3d
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          HANDLER: ${{ matrix.handler }}
-        with:
-          manager_image: "api-gateway-manager:PR-${{github.event.number}}"
-          test_make_target: test-migration-zero-downtime-${{ matrix.handler }}
-
   verify-pins:
     name: Verify-commit-pins
     if: github.event.pull_request.draft == false
@@ -86,7 +26,7 @@ jobs:
     secrets: inherit
 
   pull-request-status:
-    needs: [ build-image, unit-tests, integration-tests, migration-downtime-tests-k3d, verify-pins ]
+    needs: [ verify-pins ]
     runs-on: ubuntu-latest
     if: always()
     steps:
@@ -96,12 +36,12 @@ jobs:
         run: exit 1
         
   dependabot:
-    needs: [ build-image, unit-tests, integration-tests, migration-downtime-tests-k3d, verify-pins, pull-request-status ]
+    needs: [ verify-pins, pull-request-status ]
     runs-on: ubuntu-latest
     permissions:
       pull-requests: write
       contents: write
-    if: ${{ needs.pull-request-status.result == 'success' && github.actor == 'dependabot[bot]' && github.event_name == 'pull_request'}}
+    if: ${{ success('pull-request-status') && github.actor == 'dependabot[bot]' && github.event_name == 'pull_request'}}
     steps:
       - id: metadata
         uses: dependabot/fetch-metadata@v2
